css/responsive.css
/* ==|== media queries ====================================================== */

@media only screen and (max-width: 480px) {

	#head hgroup h1 a{ font-size: 37px; line-height: 45px;}
	#head hgroup h2{ font-size: 20px; line-height: 30px;}

	#content{
		padding-bottom: 50px;
		border-bottom: 4px solid #bcbcbc;
		margin-bottom: 20px;
	}	
	
	#sidebar .search #s{	width: 91.2%;}
	
}

@media only screen and (max-width: 768px) {

	#head nav{
		height: 35px;
	}

	#content{
		padding-bottom: 50px;
		border-bottom: 4px solid #bcbcbc;
		margin-bottom: 20px;
	}	

	#sidebar .search #s{	width: 96.8%;}

}

